# SalarixiOnion

./: .gitignore  ERRORS.md  LICENSE  README.md  index.html  package-lock.json  package.json  proxies.txt  salarixi.guide.json  salarixi.lang.json  salarixi.plugins.json  salarixi.version.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  offer.md  (+3 more)
SalarixiOnion/: LICENSE  README.md  salarixi.version.json
app/: .gitignore  README.md  build.rs  rustfmt.toml  tauri.conf.json
dev/: builder.sh
docs/: DOCS.md  FAQ.md
frontend/: README.md
main/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
src/: collector.ts  logger.ts  main.ts  message.ts  particles.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/base/: control.rs  core.rs  flow.rs  functions.rs  mod.rs  processor.rs  registry.rs
src-tauri/src/base/auth/: auth.rs
src-tauri/src/base/bot/: mod.rs  profile.rs  states.rs  tasks.rs
src-tauri/src/base/handlers/: handlers.rs  mod.rs  single.rs  swarm.rs
src-tauri/src/base/modules/: action.rs  anti_afk.rs  anti_fall.rs  bow_aim.rs  chat.rs  farmer.rs  flight.rs  inventory.rs  killaura.rs  miner.rs  mod.rs  movement.rs  scaffold.rs  stealer.rs
src-tauri/src/base/plugins/: auto_armor.rs  auto_eat.rs  auto_look.rs  auto_potion.rs  auto_repair.rs  auto_shield.rs  auto_totem.rs  mod.rs
src-tauri/src/base/utils/: anti_captcha.rs  captcha_bypass.rs  map_renderer.rs  mod.rs
src-tauri/src/base/utils/captcha/: catcher.rs  mod.rs
src-tauri/src/common/: auxiliary.rs  impls.rs  interact.rs  inventory.rs  mod.rs  movement.rs  rotation.rs  validation.rs
src-tauri/src/common/generators/: random.rs
src-tauri/src/core/: footing.rs  functions.rs  mod.rs  registry.rs  traits.rs
src-tauri/src/core/auth/: auth.rs
src-tauri/src/core/bot/: profile.rs  states.rs  tasks.rs
src-tauri/src/core/handlers/: mod.rs  single.rs  swarm.rs
src-tauri/src/core/modules/: action.rs  anti_afk.rs  anti_fall.rs  bow_aim.rs  chat.rs  farmer.rs  flight.rs  inventory.rs  killaura.rs  miner.rs  mod.rs  movement.rs  scaffold.rs  stalker.rs  stealer.rs
src-tauri/src/core/plugins/: auto_armor.rs  auto_eat.rs  auto_look.rs  auto_potion.rs  auto_repair.rs  auto_shield.rs  auto_totem.rs
src-tauri/src/core/utils/: captcha_bypass.rs  mod.rs
src-tauri/src/emit/: emit.rs  mod.rs
src-tauri/src/extensions/: default.rs  interact.rs  inventory.rs  mod.rs  movement.rs  physics.rs  rotation.rs
src-tauri/src/generators/: mod.rs  mutator.rs  random.rs
src-tauri/src/methods/: methods.rs
src-tauri/src/quick/: mod.rs  quick.rs
src-tauri/src/radar/: mod.rs  radar.rs
src-tauri/src/rpc/: rpc.rs
src-tauri/src/script/: executor.rs  mod.rs
src-tauri/src/script/functions/: basic.rs
src-tauri/src/state/: mod.rs  state.rs
src-tauri/src/tasks/: mod.rs  tasks.rs
src-tauri/src/tools/: mod.rs  mutator.rs  random.rs
src-tauri/src/tools/ping/: ping.rs
src-tauri/src/tools/radar/: radar.rs
src-tauri/src/webhook/: webhook.rs
(+176 files in other folders)
