[package]
name = "salarixionion"
version = "1.0.4"
description = "Smart botting client"
authors = ["nullclyze"]
edition = "2021"

[lib]
name = "salarixionion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

azalea = { git = "https://github.com/azalea-rs/azalea" }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
anyhow = "1.0"

rand = "0.8"
regex = "1"
once_cell = "1.18"

chrono = { version = "0.4", features = ["clock"] }
memory-stats = "1.0.0"

open = "5.3.3"
