[package]
name = "salarixionion"
version = "1.0.8"
description = "Client for Minecraft botting"
authors = ["nullclyze"]
edition = "2021"

[lib]
name = "salarixionion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
azalea = { git = "https://github.com/azalea-rs/azalea", default-features = false, features = ["default"] }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
parking_lot = "0.12"
anyhow = "1.0"
rand = "0.8"
regex = "1"
once_cell = "1.18"
memory-stats = "1.0.0"
open = "5.3.3"
base64 = "0.22.1"
image = "0.25"
dashmap = "6.1.0"
rhai = "1.24.0"
dns-lookup = "3.0.1"
socks5-impl = { version = "0.7.3", features = ["client"] }
thirtyfour = "0.36.1"
