[package]
name = "salarixionion"
version = "1.0.9"
description = "Client for Minecraft botting"
authors = ["nullclyze"]
edition = "2021"

[lib]
name = "salarixionion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.149", features = [] }
azalea = { git = "https://github.com/azalea-rs/azalea", features = ["default"] }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion", features = [] }
socks5-impl = { version = "0.7.3", features = ["client"] }
reqwest = { version = "0.13.1", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
regex = "1"
once_cell = "1.18"
memory-stats = "1.0.0"
open = "5.3.3"
base64 = "0.22.1"
image = "0.25"
dashmap = "6.1.0"
rhai = "1.24.0"
dns-lookup = "3.0.1"
thirtyfour = "0.36.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
discord-presence = "3.2.0"
